@@ -258,9 +258,6 @@ public class ProcessManager {
         + ConfigurationProperties.VALIDATE_SERIALIZABLE_OBJECTS + "=true");
     cmds.add("-ea");
     cmds.add("-XX:MetaspaceSize=512m");
-    cmds.add("-XX:+PrintGC");
-    cmds.add("-XX:+PrintGCDetails");
-    cmds.add("-XX:+PrintGCTimeStamps");
     cmds.add(agent);
     cmds.add(ChildVM.class.getName());
     String[] rst = new String[cmds.size()];
